[package]
name = "timers_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
tui-textarea = "0.4.0"
rodio = "0.17.3"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.12", features = ["derive"] }
config = { version = "0.13.4", features = ["toml"] }
dirs = "5.0.1"
