[package]
name = "timers_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-textarea = "0.7.0"
rodio = "0.20.1"
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.4", features = ["toml"] }
dirs = "5.0.1"
